fix css on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -1,231 +1,226 @@
 @keyframes shake {
-    0%         { transform: rotate(0deg); }
-    20%     { transform: rotate(-10deg); }
-    40%     { transform: rotate(10deg); }
-    60%     { transform: rotate(-5deg); }
-    80%     { transform: rotate(5deg); }
-    100%     { transform: rotate(0deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  20% {
+    transform: rotate(-10deg);
+  }
+  40% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(-5deg);
+  }
+  80% {
+    transform: rotate(5deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
-html, body {
-    color: #424242;
+html,
+body {
+  color: #424242;
 }
 
 html {
-    background: #B1E7F1 url(../public/images/header3.jpg) no-repeat center top;
+  background: #b1e7f1 url(../public/images/header3.jpg) no-repeat center top;
 }
 
 main {
-    text-align: center;
-    padding: 1em;
+  text-align: center;
+  padding: 1em;
 }
 
 h1 {
-    text-align: center;
-    font-family: 'Press Start 2P', cursive;
-    text-shadow: -3px 3px 0px #DD3828;
-    color: white;
-    padding: 60px;
-    max-width: 400px;
-    margin: 0 auto;
-    line-height: 1.4em;
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  text-shadow: -3px 3px 0px #dd3828;
+  color: white;
+  padding: 60px;
+  max-width: 400px;
+  margin: 0 auto;
+  line-height: 1.4em;
 }
 ul {
-    margin-bottom: 50px;
-    list-style: none;
+  margin-bottom: 50px;
+  list-style: none;
 }
 
-
 li {
-    padding: 20px;
-    background: white;
-    box-shadow: -3px 3px 0px rgba(0, 0, 0, 0.22);
-    margin-right: 20px;
-    text-align: center;    
-    font-family: 'Press Start 2P', cursive;
-    text-shadow: -2px 2px 0px rgba(0, 0, 0, 0.15);
-    color: #DD3828;
-    font-size: 0.8em;
-    transform: rotate(-3deg)
-
+  padding: 20px;
+  background: white;
+  box-shadow: -3px 3px 0px rgba(0, 0, 0, 0.22);
+  margin-right: 20px;
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  text-shadow: -2px 2px 0px rgba(0, 0, 0, 0.15);
+  color: #dd3828;
+  font-size: 0.8em;
+  transform: rotate(-3deg);
 }
 
 li:before,
 li:after {
-    content: '🎄';
-    margin-right: 20px;
-    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
-    vertical-align: bottom;
+  content: '🎄';
+  margin-right: 20px;
+  text-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+  vertical-align: bottom;
 }
 
-li:before{
-    margin-right: 20px;
+li:before {
+  margin-right: 20px;
 }
 
-li:after{
-    margin-left: 20px;
+li:after {
+  margin-left: 20px;
 }
 
-.box, 
+.box,
 .present {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .user-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .user {
-    width: 12em;
-    height: 12em;
-    margin: 1em;
-    perspective: 850px; 
+  width: 12em;
+  height: 12em;
+  margin: 1em;
+  perspective: 850px;
 }
 
 .box {
-    background: #DD3828;
-    transform-style: preserve-3d;
-    transform-origin: 0;
-    perspective: 850px; 
-    text-align: center;
-    box-shadow: -6px 6px 0px rgba(0, 0, 0, 0.22);
-    cursor: pointer;
-    transition: all 0.3s ease-out;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: #dd3828;
+  transform-style: preserve-3d;
+  transform-origin: 0;
+  perspective: 850px;
+  text-align: center;
+  box-shadow: -6px 6px 0px rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .box .img {
-    line-height: 7em;
-    width: 100%;
-    height: 100%;
-    background: #424242;
+  line-height: 7em;
+  width: 100%;
+  height: 100%;
+  background: #424242;
 }
 .box h2 {
-    margin: 0;
-    padding: 0.5em;
-    font-size: 0.85em;
-    color: white;
-    font-family: 'Press Start 2P', cursive;
-    text-shadow: -3px 3px 0px rgba(0, 0, 0, 0.22);
-    letter-spacing: 2px;
+  margin: 0;
+  padding: 0.5em;
+  font-size: 0.85em;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  text-shadow: -3px 3px 0px rgba(0, 0, 0, 0.22);
+  letter-spacing: 2px;
 }
 
-.user.active .box {  
-    background: black;
-    transform: rotateY(-100deg);
-    perspective-origin: 0;
-    transition: all .4s ease-in;
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+.user.active .box {
+  background: black;
+  transform: rotateY(-100deg);
+  perspective-origin: 0;
+  transition: all 0.4s ease-in;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
 }
 
-.user.active .box h2 {
-    backface-visibility: hidden;
-    position: absolute;
-}
 .present {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #0f0e1f;
-    box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15), inset 0 0 30px 20px rgba(0, 0, 0, 0.4);
-    z-index: -1;
-    text-align: center;
+  background: #0f0e1f;
+  box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15),
+    inset 0 0 30px 20px rgba(0, 0, 0, 0.4);
+  z-index: -1;
+  text-align: center;
 }
 
 .bauble {
-    background: black;
-    font-size: 2em;
-    line-height: 2.75em;
-    color: white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  background: black;
+  font-size: 2em;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .bauble img {
-    max-width: 100%;
-    max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
 }
 
-.bauble-flex {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-height: 12rem;
-}
-
-.bauble-flex .name {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 0.85rem;
-    line-height: 2rem;
-    font-family: 'Press Start 2P', cursive;
-    text-shadow: -3px 3px 0px rgba(0, 0, 0, 0.22);
-    letter-spacing: 2px;
+.bauble .name {
+  z-index: 1;
+  text-align: center;
+  font-size: 0.85rem;
+  line-height: 2rem;
+  font-family: 'Press Start 2P', cursive;
+  text-shadow: -3px 3px 0px rgba(0, 0, 0, 0.22);
+  letter-spacing: 2px;
 }
 
 .popup {
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: black;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: black;
 
-    top: 0;
-    left: 0;
-    width: 0%;
-    height: 0%;
-    transition: all 2s ease;
-
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 0%;
+  transition: all 2s ease;
 }
 .popup-close {
-    font-size: 30px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 1em;
-    color: #aaa;
+  font-size: 30px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1em;
+  color: #aaa;
 }
 .popup-close:hover {
-    color: #eee;
+  color: #eee;
 }
 
 .popup.big {
-    cursor: pointer;
-    transition: all .5s ease;
-    top: 0!important;
-    left: 0!important;
-    width: 100%;
-    height: 100%;
-    animation: shake 1s;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100%;
+  height: 100%;
+  animation: shake 1s;
 }
 
 .popup > div {
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center center;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
 }
 
 .instructions {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
